--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -21,14 +21,14 @@ jobs:
       with:
         go-version: 1.18
 
+    - name: Run golangci-lint
+      uses: golangci/golangci-lint-action@v3.3.1
+      with:
+        version: latest
+    
     - name: Build
       run: go build -v cmd/aries/main.go
       
-    - name: golangci-lint
-      uses: golangci/golangci-lint-action@v2
-      with:
-        version: v1.29.0
-
     - name: Test
       run: go test -v ./...
       
