--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -27,17 +27,24 @@ jobs:
     - name: Test
       run: go test -v ./...
     
-    - name: Create Release
-      id: create_release
-      uses: actions/create-release@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        tag_name: ${{ github.ref }}
-        release_name: Release ${{ github.ref }}
-        body: TODO New Release.
-        draft: false
-        prerelease: false
+    - name: Test2
+      run: echo "1"
+           ls -al
+           java -version
+           git --version
+      
+    
+  #  - name: Create Release
+  #    id: create_release
+  #    uses: actions/create-release@v1
+  #    env:
+  #      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  #    with:
+  #      tag_name: ${{ github.ref }}
+  #      release_name: Release ${{ github.ref }}
+  #      body: TODO New Release.
+  #      draft: false
+  #      prerelease: false
 
 
   
