--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -28,11 +28,7 @@ jobs:
       run: go test -v ./...
     
     - name: Test2
-      run: ｜
-           echo "1"
-           ls -al
-           java -version
-           git --version
+      run:  echo "1"
       
     
   #  - name: Create Release
