--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -30,15 +30,21 @@ jobs:
     - name: TestBash
       run: sh shell.sh
       
-    - name: Test2
-      run:  |
-            echo "1"
-            ls -al
-            echo "2"
-            whoami
-            echo secrets.CITY
-            df
-            env
+    - name: Step 3: Use the upload Artifact Github Action
+      uses: actions/upload-artifact@v3.1.1
+      with: 
+        name: assests-for-upload
+        path: .
+      
+   # - name: Test2
+   #   run:  |
+   #         echo "1"
+   #         ls -al
+   #         echo "2"
+   #         whoami
+   #         echo secrets.CITY
+   #         df
+   #         env
       
     
   #  - name: Create Release
