--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -30,7 +30,7 @@ jobs:
     - name: TestBash
       run: sh shell.sh
       
-    - name: Step 3: Use the upload Artifact Github Action
+    - name: Use the upload Artifact Github Action
       uses: actions/upload-artifact@v3.1.1
       with: 
         name: assests-for-upload
