--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -26,16 +26,15 @@ jobs:
     
     - name: run bash file
       run: sh shell.sh
-   
-   - name: Create Release
-     id: create_release
-     uses: actions/create-release@v1
-     env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}-{{ date }}
-     with:
-        tag_name: ${{ github.ref }}
-        release_name: Release ${{ github.ref }}
-        body: TODO New Release.
+
+    - name: Create Release
+      id: create_release
+      uses: actions/create-release@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        tag_name: ${{ steps.get_version.outputs.VERSION }}
+        release_name: ${{ steps.get_version.outputs.VERSION }}
         draft: false
         prerelease: false
 
