--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -6,8 +6,6 @@ name: AriesProject
 on:
   push:
     branches: [ "main" ]
-    tags:
-      - 'v*'
   pull_request:
     branches: [ "main" ]
 
@@ -35,8 +33,8 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        tag_name: ${{ steps.get_version.outputs.VERSION }}
-        release_name: ${{ steps.get_version.outputs.VERSION }}
+        tag_name: ${{ github.ref }} - {{ date }}
+        release_name: ${{ github.ref }} - {{ date }}
         draft: false
         prerelease: false
 
