--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,38 +1,38 @@
-# This workflow will build a golang project
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-go
-
-name: AriesProject
+name: Go
 
 on:
   push:
-    tags:
-    - 'v*'
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
+
 jobs:
 
-  build:
+  myci:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
 
-    - name: Set up Go Environment
+    - name: Set up Go
       uses: actions/setup-go@v3
       with:
         go-version: 1.18
     
     - name: Build
       run: go build -v cmd/aries/main.go
+      
+    - name: Test
+      run: go test -v ./...
     
-    - name: run bash file
-      run: sh shell.sh
-
     - name: Create Release
       id: create_release
       uses: actions/create-release@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        tag_name: ${{ github.ref }} 
-        release_name: ${{ github.ref }}
+        tag_name: ${{ github.ref }}
+        release_name: Release ${{ github.ref }}
+        body: TODO New Release.
         draft: false
         prerelease: false
 
